
1.2.0 ( rXXXX )
---------------

(Has the tests that work with Groovy 1.6 and fail with Groovy 1.5.)

Introduce the GantBinding class to ensure various things that are needed for Gant to work and to allow more
efficient cloning for multi-threading builds.

Remove the inserting of the class name for targets classes into the binding.  Change from Maven.<property>
to maven.<property>.  This is a breaking change, all uses of Maven as a reference from teh binding must be
replaced by maven.

Add in checks for duplicate symbols in the binding.

Make the symbols created by the tools lowercase rather than upper case.  Add in checks for adding an
overwrite in the binding.


1.1.2 ( rXXXX )
---------------

Updated to using Ivy 2.0.0-beta2.

Corrected the bug that the Ivy tool was not operating in the correct namespace.  This removes the spurious
message: "Trying to override old definition of task buildnumber" that used to happen.

Refactored the IncludeTarget and IncludeTool classes to move replicated code into the common superclass
AbstractTool.

Corrected the way that jars are included on the classpath from ~/.gant/lib, ~/.ant/lib and $ANT_HOME/lib.

Updated TestNG from 5.7 to 5.8 in Maven target set. Amended the properties set so that the TestNG version
number and and classifier can be set by the user instead of being only hardwired.  The defaults are still
hardwired in an ugly way though.

1.1.1 ( r9027 )
---------------

Added the Ivy and Maven Ant Tasks jars to the binary distribution.

Amend the Maven target set to add explicit specification of the source and test directories.  This applies
the Groovy joint compiler to everything in that directory, i.e. the Maven 2 split of language specific
directories is not applied.

Amended the Execute tool adding multi-threading of the process output streams to avoid blocking due to
overful buffers.  cf. GANT-22.  Altered return type of methods so as to return the return code of the
executed process. cf. GANT-23.
